--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "dependencies": {
     "next": "^13.5.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
+    "tailblocks": "github:mertJF/tailblocks"
   },
   "devDependencies": {
-    "autoprefixer": "latest",
+    "autoprefixer": "^10.4.16",
     "eslint": "latest",
     "eslint-config-next": "latest",
-    "postcss": "latest",
-    "tailwindcss": "latest"
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3"
   }
 }
